address high contrast accessibility issues

--- a/src/DetailsView/components/adhoc-tab-stops-test-view.scss
+++ b/src/DetailsView/components/adhoc-tab-stops-test-view.scss
@@ -3,11 +3,6 @@
 
 @import '../../common/styles/common.scss';
 
-.tab-stops-test-view-container {
-    background-color: $neutral-2;
-    height: 100%;
-}
-
 .tab-stops-test-view {
     padding-top: $fastPassRightPanelMarginTop;
     padding-right: $fastPassRightPanelMarginRight;
@@ -17,6 +12,7 @@
     i {
         font-size: 16px;
     }
+    height: 100%;
 }
 
 .requirement-table-title {
